--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-avatar-editor": "^13.0.0",
     "react-dom": "latest",
     "react-icons": "^4.11.0",
+    "react-paginate": "^8.2.0",
     "react-toastify": "^9.1.3"
   },
   "devDependencies": {
