--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "latest",
     "react-avatar-editor": "^13.0.0",
     "react-dom": "latest",
+    "react-hook-form": "^7.48.2",
     "react-icons": "^4.11.0",
     "react-paginate": "^8.2.0",
     "react-toastify": "^9.1.3"
