--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@tanstack/react-table": "^8.10.7",
     "axios": "^1.6.1",
     "js-cookie": "^3.0.5",
-    "next": "^13.5.4",
+    "next": "^14.0.4-canary.6",
     "react": "latest",
     "react-avatar-editor": "^13.0.0",
     "react-dom": "latest",
